tests/invalid/ee_invalid.err_exp
ee_invalid.m:039: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:039:   `int'/0:
ee_invalid.m:039:   error: `int'/0 is a builtin type.
ee_invalid.m:043: In `:- pragma foreign_export_enum' declaration:
ee_invalid.m:043:   error: undefined type `undefined_type'/0.
ee_invalid.m:047: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:047:   `ee_invalid.foo'/1:
ee_invalid.m:047:   error: `ee_invalid.foo'/1 is not an enumeration type.
ee_invalid.m:047:   It has this non-zero arity constructor:
ee_invalid.m:047:       `foo'/1.
ee_invalid.m:051: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:051:   `ee_invalid.bar'/0:
ee_invalid.m:051:   error: `ee_invalid.bar'/0 is not an enumeration type; it is
ee_invalid.m:051:   an equivalence type.
ee_invalid.m:058: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:058:   `ee_invalid.baz'/0:
ee_invalid.m:058:   error: `ee_invalid.baz'/0 is not an enumeration type; it is
ee_invalid.m:058:   a foreign type.
ee_invalid.m:063: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:063:   `ee_invalid.alphabet'/0:
ee_invalid.m:063:   error: the following symbol is not a constructor of the
ee_invalid.m:063:   type:
ee_invalid.m:063:       `deg'.
ee_invalid.m:068: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:068:   `ee_invalid.alphabet'/0:
ee_invalid.m:068:   error: the following symbol has a module qualification that
ee_invalid.m:068:   is not compatible with the type definition:
ee_invalid.m:068:       `foo.def'.
ee_invalid.m:073: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:073:   `ee_invalid.alphabet'/0:
ee_invalid.m:073:   error: the following symbol is not a constructor of the
ee_invalid.m:073:   type:
ee_invalid.m:073:       `deg'.
ee_invalid.m:073: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:073:   `ee_invalid.alphabet'/0:
ee_invalid.m:073:   error: the specified mapping between the names of Mercury
ee_invalid.m:073:   constructors and the corresponding foreign names is
ee_invalid.m:073:   inconsistent.
ee_invalid.m:073:   The following foreign name is repeated:
ee_invalid.m:073:       `ABC'.
ee_invalid.m:077: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:077:   `ee_invalid.alphabet'/0:
ee_invalid.m:077:   error: the specified mapping between the names of Mercury
ee_invalid.m:077:   constructors and the corresponding foreign names is
ee_invalid.m:077:   inconsistent.
ee_invalid.m:077:   The following Mercury constructor name is repeated:
ee_invalid.m:077:       `abc'.
ee_invalid.m:083: In `:- pragma foreign_export_enum' declaration for type
ee_invalid.m:083:   `ee_invalid.strange_names'/0:
ee_invalid.m:083:   error: some of the constructors of the type cannot be
ee_invalid.m:083:   converted into valid identifiers for C.
ee_invalid.m:083:   The problematic foreign names are:
ee_invalid.m:083:       `!@THIS',
ee_invalid.m:083:       `#$WON'T',
ee_invalid.m:083:       `%^WORK'.
